fixed to value name and text-gap value

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -303,8 +303,8 @@
 @sand-alert-overlay-border-radius: @sand-popup-border-radius;
 @sand-alert-overlay-button-spacing: 30px;
 @sand-alert-overlay-buttons-margin: 0 0 0 126px;
-@sand-alert-overlay-no-image-text-gap: (90px - @sand-alert-overlay-padding-left);
-@sand-alert-overlay-image-text-gap: 48px;
+@sand-alert-overlay-noimage-text-gap: 30px;
+@sand-alert-overlay-image-text-gap: @sand-alert-overlay-noimage-text-gap + 18px;
 @sand-alert-overlay-text-button-gap: (198px - .extract(@sand-alert-overlay-buttons-margin, left)[] - .extract(@sand-button-margin, right)[]);
 @sand-alert-overlay-content-width: 1200px;
 @sand-alert-overlay-image-margin: 0;
